--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link rel="mycss" href="mycss.css">
-	
+	<title>Assignment</title>
+	<link rel="stylesheet" href="mycss.css">
 </head>
 <body>
-<p>Hello</p>
+<h1 class="p">Hello</p>
 </body>
 </html>
