--- a/site/mod-1/index.html
+++ b/site/mod-1/index.html
@@ -2,11 +2,34 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-	<title></title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Assignment 2</title>
+
 </head>
 <body>
 
-<p>Hello</p>
+<h1>Our Menu</h1>
+
+<div class="section1">
+	<div class="box">
+	<div class="title1">Chicken</div>
+	<div class="text">This is the menu to make a tasty chicken recipe. Non alterum finitas tot diversi. Gi durent ad se pendam cupiam ut. Ego affirmans oblivisci via exponetur vim age existeret. At cumque de semper pulses ut. Reducantur detorqueat via potentiali supponatur indefinite sic repugnaret per. Ut de tritam gi veluti amisit illico.</div>
+	</div>
+</div>
+
+<div class="section2">
+	<div class="box">
+	<div class="title2">Beef</div>
+	<div class="text">This is the menu to make a tasty beef recipe. Non alterum finitas tot diversi. Gi durent ad se pendam cupiam ut. Ego affirmans oblivisci via exponetur vim age existeret. At cumque de semper pulses ut. Reducantur detorqueat via potentiali supponatur indefinite sic repugnaret per. Ut de tritam gi veluti amisit illico.</div>
+	</div>
+</div>
+
+<div class="section3">
+	<div class="box">
+	<div class="title3">Sushi</div>
+	<div class="text">This is the menu to make a tasty sushi recipe. Non alterum finitas tot diversi. Gi durent ad se pendam cupiam ut. Ego affirmans oblivisci via exponetur vim age existeret. At cumque de semper pulses ut. Reducantur detorqueat via potentiali supponatur indefinite sic repugnaret per. Ut de tritam gi veluti amisit illico.</div>
+	</div>
+</div>
 
 </body>
 </html>
